--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 version: '3'
 services:
 
-  node:
-    build: .
+  srv:
+    build:
+      context: .
+      dockerfile: srv/Dockerfile
     volumes:
       - ./:/home/node/app
     user: node
     working_dir: /home/node/app
     environment:
       - NODE_ENV=development
-    expose:
-      - "8081"
-    command: "npm start"
+    ports:
+      - "8000:8000"
+    command: "npm run server"
