--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bellgame-server",
   "version": "1.0.0",
   "description": "A multiplayer server for hosting the bellgame",
-  "main": "srv/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node -r esm ./srv/index.js"
   },
   "repository": {
     "type": "git",
