Mongo backend added

--- a/srv/Dockerfile
+++ b/srv/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:latest
-COPY . /home/app/node
+COPY package.json /home/app/node/package.json
+COPY package-lock.json /home/app/node/package-lock.json
 WORKDIR /home/app/node
 RUN npm install
