--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,23 @@ services:
     environment:
       - NODE_ENV=development
     ports:
-      - "8000:8000"
+      - 8000:8000
     command: "npm run server"
+    depends_on: 
+      - mongo
+  
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: pass
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
