--- a/srv/package.json
+++ b/srv/package.json
@@ -4,7 +4,7 @@
   "description": "A multiplayer server for hosting the bellgame",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node -r esm ./srv/index.js"
+    "start": "node -r esm ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "boardgame.io": "^0.35.1",
     "esm": "^3.2.25",
+    "mocha": "^6.2.2",
     "mongodb": "^3.3.5"
   }
 }
