--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./srv
     volumes:
       - ./srv/src:/home/node/app/src
+      - ./bellgame:/home/node/app/bellgame
     user: node
     working_dir: /home/node/app/src
     environment:
@@ -21,6 +22,7 @@ services:
       context: app/
     volumes:
       - ./app/src:/home/node/app/src
+      - ./bellgame:/home/node/app/bellgame
     working_dir: /home/node/app/src
     environment:
       - NODE_ENV=development
