--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "last 1 Chrome versions"
   ],
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.0",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
@@ -20,6 +21,7 @@
     "parcel-plugin-svelte": "^4.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "superagent": "^5.1.2",
     "svelte": "^3.0.0",
