--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
       - ./bellgame:/home/node/app/bellgame
     user: node
     working_dir: /home/node/app/src
-    environment:
-      - NODE_ENV=development
     ports:
       - 8000:8000
+    environment:
+      - NODE_ENV=development
     command: "npm start"
     depends_on: 
       - mongo
@@ -21,17 +21,17 @@ services:
     build:
       context: ./app
     volumes:
-      - ./app/src:/home/node/app/src
-      - ./bellgame:/home/node/app/bellgame
-    working_dir: /home/node/app/src
+      - ./app/src:/app/src
+      - ./app/public:/app/public
+      - ./bellgame:/app/bellgame
+    working_dir: /app/src
+    ports:
+      - 3000:3000
     environment:
       - NODE_ENV=development
-    ports:
-      - 80:3000
     command: "npm start"
     depends_on: 
       - mongo
-
   
   mongo:
     image: mongo
@@ -48,3 +48,16 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: pass
+
+  traefik:
+    image: "traefik:v2.0.0-rc3"
+    container_name: "traefik"
+    command:
+      #- "--log.level=DEBUG"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+    ports:
+      - "8080:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
