--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,62 +2,34 @@ version: '3'
 services:
 
   srv:
-    build:
-      context: ./srv
-    volumes:
-      - ./srv/src:/home/node/app/src
-      - ./bellgame:/home/node/app/bellgame
+    image: registry.gitlab.com/aarongrisez/bellgame2/srv:latest
     user: node
     working_dir: /home/node/app/src
-    ports:
-      - 8000:8000
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
     command: "npm start"
     depends_on: 
       - mongo
   
   app:
-    build:
-      context: ./app
-    volumes:
-      - ./app/src:/app/src
-      - ./app/public:/app/public
-      - ./bellgame:/app/bellgame
+    image: registry.gitlab.com/aarongrisez/bellgame2/app:latest
     working_dir: /app/src
-    ports:
-      - 3000:3000
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
     command: "npm start"
     depends_on: 
       - mongo
-  
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: pass
-
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
 
   traefik:
     image: "traefik:v2.0.0-rc3"
     container_name: "traefik"
     command:
-      #- "--log.level=DEBUG"
-      - "--api.insecure=true"
+      - "--log.level=INFO"
+      - "--api.insecure=false"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
     ports:
+      - "80:80"
       - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
