--- a/srv/package.json
+++ b/srv/package.json
@@ -20,6 +20,7 @@
     "boardgame.io": "^0.35.1",
     "esm": "^3.2.25",
     "mocha": "^6.2.2",
-    "mongodb": "^3.3.5"
+    "mongodb": "^3.3.5",
+    "dotenv": "^8.2.0"
   }
 }
