--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          docker_layer_caching: true
+          docker_layer_caching: false
       - run:
           TAG=1.0.$CIRCLE_BUILD_NUM
           docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>>
