--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,5 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
-          TAG=1.0.$CIRCLE_BUILD_NUM
-          docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> .
+          docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> . |
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --pasword-stdin
