--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ jobs:
           docker_layer_caching: false
       - run:
           docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> . |
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --pasword-stdin
+          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
