--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,5 @@ jobs:
           docker_layer_caching: false
       - run:
           docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> . |
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin |
+          docker push aarongrisez/bellgame2-app:<<pipeline.git.revision>>  
