--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,11 @@
-version: 2.1
+version: 2
 jobs:
   build:
+    machine:
+      image: ubuntu-1604:201903-01
     working_directory: ~/project
-    docker:
-      - image: circleci/node:10.16.3
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: false
       - run:
           docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> . |
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin |
