--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run:
+      - run: |
           docker build -t aarongrisez/bellgame2-app:<<pipeline.git.revision>> .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
           docker push aarongrisez/bellgame2-app:<<pipeline.git.revision>>  
