--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: |
-          docker build -t aarongrisez/bellgame2-app:<< pipeline.git.revision >> .
+          cd app
+          docker build -t aarongrisez/bellgame2-app:<< pipeline.git.revision >>dev --dockerfile dev.Dockerfile .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker push aarongrisez/bellgame2-app:<< pipeline.git.revision >>  
+          docker push aarongrisez/bellgame2-app:<< pipeline.git.revision >>dev 
