--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
   srv:
     build:
       dockerfile: ./srv/Dockerfile
-      context: .
+      context: ./srv
     volumes:
       - ./srv/src:/app/src
     working_dir: /app
@@ -16,7 +16,7 @@ services:
   app:
     build:
       dockerfile: ./app/dev.Dockerfile
-      context: .
+      context: ./app
     volumes:
       - ./app/src:/usr/src/app/src
       - ./app/public:/usr/src/app/public
