--- a/srv/Dockerfile
+++ b/srv/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:latest
-COPY ./srv/package.json /app/package.json
-COPY ./srv/package-lock.json /app/package-lock.json
+COPY ./package.json /app/package.json
+COPY ./package-lock.json /app/package-lock.json
 WORKDIR /app
 RUN npm install
-COPY ./srv/src /app/src
+COPY ./src /app/src
 EXPOSE 8000
 CMD ["npm", "start"]
