--- a/app/package.json
+++ b/app/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "auth0-react-01-login",
   "version": "0.1.0",
@@ -10,42 +9,59 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-      "@auth0/auth0-spa-js": "^1.6.0",
-      "@babel/core": "^7.6.2",
-      "@babel/plugin-proposal-class-properties": "^7.5.5",
-      "@babel/preset-env": "^7.6.2",
-      "@babel/preset-react": "^7.0.0",
-      "@fortawesome/fontawesome-svg-core": "^1.2.17",
-      "@fortawesome/free-solid-svg-icons": "^5.8.1",
-      "@fortawesome/react-fontawesome": "^0.1.4",
-      "boardgame.io": "^0.35.1",
-      "react": "^16.12.0",
-      "react-dom": "^16.9.0",
-      "react-router": "^5.1.2",
-      "react-router-dom": "^5.1.2",
-      "react-scripts": "3.0.1",
-      "reactstrap": "^8.0.0",
-      "superagent": "^5.1.2",
-      "svelte": "^3.0.0",
-      "express": "^4.16.4",
-      "highlight.js": "^9.15.6",
-      "morgan": "^1.9.1"
-    },
-    "devDependencies": {},
-    "eslintConfig": {
-      "extends": "react-app"
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+    "@auth0/auth0-spa-js": "^1.6.0",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "boardgame.io": "^0.35.1",
+    "express": "^4.16.4",
+    "highlight.js": "^9.15.6",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
+    "morgan": "^1.9.1",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
+    "superagent": "^5.1.2",
+    "svelte": "^3.0.0",
+    "typescript": "^3.7.5"
+  },
+  "devDependencies": {},
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true
   }
-  
+}
