--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,7 +3,6 @@ services:
 
   srv:
     build:
-      dockerfile: ./srv/Dockerfile
       context: ./srv
     volumes:
       - ./srv/src:/app/src
@@ -15,7 +14,7 @@ services:
   
   app:
     build:
-      dockerfile: ./app/dev.Dockerfile
+      dockerfile: ./dev.Dockerfile
       context: ./app
     volumes:
       - ./app/src:/usr/src/app/src
@@ -25,8 +24,9 @@ services:
       - SKIP_PREFLIGHT_CHECK=true
       - REACT_APP_AUTH0_DOMAIN=dev-k1aifjsj.auth0.com
       - REACT_APP_AUTH0_CLIENT_ID=7fLB8KTeluEZVjRA9s0BhOBzmDl38ImE
-      - REACT_APP_GAME_SERVER=http://localhost:8000/srv
-      - REACT_APP_LOBBY_SERVER=http://localhost:8000/srv
+      - REACT_APP_AUTH0_AUDIENCE=https://bellga.me/srv
+      - REACT_APP_GAME_SERVER=http://localhost/srv
+      - REACT_APP_LOBBY_SERVER=http://localhost/srv
   
 secrets:
   DB_CONNECTION_URI:
