--- a/app/package.json
+++ b/app/package.json
@@ -26,10 +26,13 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.0",
     "superagent": "^5.1.2",
     "svelte": "^3.0.0",
     "typescript": "^3.7.5"
