--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "reactstrap": "^8.0.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.0",
+    "redux-saga": "^1.1.3",
     "superagent": "^5.1.2",
     "svelte": "^3.0.0",
     "typescript": "^3.7.5"
