--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,20 @@
 version: '3.7'
 services:
 
-  srv:
-    image: aarongrisez/bellgame2-srv:release-v1.0.0
-    user: node
-    environment:
-      - NODE_ENV=production
-    command: "npm start"
-    networks:
-      - proxy-net
-    labels:
-      - "traefik.http.routers.srv.rule=Host(`localhost`) && PathPrefix(`/srv`)"
-      - "traefik.http.middlewares.srv-stripprefix.stripprefix.prefixes=/srv"
-      - "traefik.http.middlewares.srv-stripprefix.stripprefix.forceslash=false"
-      - "traefik.http.routers.srv.entrypoints=web"
-      - "traefik.http.routers.srv.middlewares=srv-stripprefix"
-
   app:
-    image: aarongrisez/bellgame2-app:release-v1.0.0
-    networks:
-      - proxy-net
-    labels:
-      - "traefik.http.routers.app.entrypoints=web"
-      - "traefik.http.routers.app.rule=Host(`localhost`)"
-  
-networks:
-  proxy-net:
-    external: true
+    build:
+      dockerfile: ./dev.Dockerfile
+      context: .
+    volumes:
+      - ./src:/usr/src/app/src
+      - ./public:/usr/src/app/public
+    environment:
+      - NODE_ENV=development
+      - SKIP_PREFLIGHT_CHECK=true
+      - REACT_APP_AUTH0_DOMAIN=dev-k1aifjsj.auth0.com
+      - REACT_APP_AUTH0_CLIENT_ID=7fLB8KTeluEZVjRA9s0BhOBzmDl38ImE
+      - REACT_APP_AUTH0_AUDIENCE=https://bellga.me/srv
+      - REACT_APP_GAME_SERVER=http://localhost/srv
+      - REACT_APP_LOBBY_SERVER=http://localhost/srv
+    ports:
+      - 3000:3000
