--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - SKIP_PREFLIGHT_CHECK=true
       - REACT_APP_AUTH0_DOMAIN=dev-k1aifjsj.auth0.com
       - REACT_APP_AUTH0_CLIENT_ID=7fLB8KTeluEZVjRA9s0BhOBzmDl38ImE
-      - REACT_APP_AUTH0_AUDIENCE=https://bellga.me/srv
-      - REACT_APP_GAME_SERVER=http://localhost:8080/srv
+      - REACT_APP_AUTH0_REDIRECT_URI=http://localhost:3000
+      - REACT_APP_GAME_SERVER=http://localhost:8080
     ports:
       - 3000:3000
